--- a/public/index.html
+++ b/public/index.html
@@ -18,11 +18,11 @@
         </div>
         <form id="formDiv" onsubmit="submitLogin(event)">
             <label for="username" id="usernameLabelDiv">Username</label>
-            <input type="text" id="username" placeholder="Username" required>
+            <input type="search" id="username" placeholder="Username" required>
 
             <label for="password" id="passwordLabelDiv">Password</label>
             <div class="password-container" id="passwordDiv">
-                <input type="password" id="password" placeholder="Password" required>
+                <input type="search" id="password" placeholder="Password" required>
                 <button type="button" id="show-password" aria-label="Show Password">
                     <img src="img/visibility_24dp_5F6368_FILL0_wght400_GRAD0_opsz24.svg" alt="Show Password">
                 </button>
