--- a/public/index.html
+++ b/public/index.html
@@ -18,13 +18,21 @@
         </div>
         <form id="formDiv" onsubmit="submitLogin(event)">
             <label for="username" id="usernameLabelDiv">Username</label>
-            <input type="search" id="username" placeholder="Username" required>
-
+            <div class="name-container">
+                <input type="text" id="username" placeholder="Username" required>
+                <button type="button" id="clear-name">
+                    <img src="img/close_small_24dp_5F6368_FILL0_wght400_GRAD0_opsz24.svg" alt="Clear Name">
+                </button>
+            </div>
+            
             <label for="password" id="passwordLabelDiv">Password</label>
             <div class="password-container" id="passwordDiv">
-                <input type="search" id="password" placeholder="Password" required>
+                <input type="password" id="password" placeholder="Password" required>
                 <button type="button" id="show-password" aria-label="Show Password">
                     <img src="img/visibility_24dp_5F6368_FILL0_wght400_GRAD0_opsz24.svg" alt="Show Password">
+                </button>
+                <button type="button" id="clear-password">
+                    <img src="img/close_small_24dp_5F6368_FILL0_wght400_GRAD0_opsz24.svg" alt="Clear Password">
                 </button>
             </div>
 
